<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        style="@style/wrap_layout"
        android:layout_marginTop="10dp">

    <LinearLayout
        android:id="@+id/clickableLinear"
        style="@style/single_layout2"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/stage_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textColor="@color/text_clo"
            android:text="Please fetch the delivery for me from Akang to Software Building."/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="1"
            >
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stage_status"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/stage_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Finished"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/finish_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finish_time"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/finish_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stage_reward"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/reward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_progress"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/task_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </TableRow>

        </TableLayout>



    </LinearLayout>
    </LinearLayout>

</LinearLayout>