<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.lab.se.crowdframe.TemplateFragment">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_type"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18dp"
            android:paddingTop="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publish_hint"
            android:textAlignment="center"
            android:textSize="13dp"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"/>


        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/id_swipe_ly"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ListView
                android:id="@+id/publish_template_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="60dp"
                android:divider="#00000000"
                android:dividerHeight="0dip"
                >
            </ListView>
                <TextView
                    android:id="@+id/noData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="40dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/no_collected_temp"
                    android:textSize="15dp"
                    android:visibility="gone"/>

            </FrameLayout>
        </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>
