<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F3F6"
    tools:context="com.lab.se.crowdframe.TaskListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0F3F6"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <LinearLayout style="@style/wrap_layout">
            <!-- 上圆角-->
            <LinearLayout
                android:id="@+id/change_password"
                style="@style/top_layout">

                <TextView
                    style="@style/usertext"
                    android:text="@string/change_password" />
            </LinearLayout>

            <View style="@style/bg_line"/>

            <!-- 无圆角-->
            <LinearLayout
                android:id="@+id/change_tag"
                style="@style/mid_layout">
                <TextView
                    style="@style/usertext"
                    android:text="@string/change_tag" />
            </LinearLayout>

            <View style="@style/bg_line" />

            <!-- 下圆角-->
            <LinearLayout
                android:id="@+id/change_language"
                style="@style/bottom_layout">

                <TextView
                    style="@style/usertext"
                    android:text="@string/change_language" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
